[project]
name = "backend"
version = "0.1.0"
description = "Online Examination System Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pygame>=2.6.1",
    "mysql-connector-python>=9.6.0",
    "dotenv>=0.9.9",
    "PyJWT>=2.8.0",
]
